# cpp-template-with-tests

./: .clang-format  CMakeLists.txt  RationalNumber.cpp  RationalNumber.h
Google_tests/: CMakeLists.txt  RationalNumberTests.cpp
